--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -84,27 +84,6 @@
           "extraArgs": ["+nightly"]
         }
       }
-    },
-    "pylsp": {
-      "initialization_options": {
-        "plugins": {
-          "autopep8": {
-            "enabled": false
-          },
-          "flake8": {
-            "enabled": false
-          },
-          "pycodestyle": {
-            "enabled": false
-          },
-          "pydocstyle": {
-            "enabled": false
-          },
-          "yapf": {
-            "enabled": false
-          }
-        }
-      }
     }
   },
   "languages": {
@@ -114,7 +93,7 @@
         "coloring": "indent_aware",
         "background_coloring": "indent_aware"
       },
-      "language_servers": ["!pyright", "..."],
+      "language_servers": ["!pylsp", "..."],
       "format_on_save": "on",
       "formatter": [
         {
