--- a/home/.chezmoiexternal.toml
+++ b/home/.chezmoiexternal.toml
@@ -4,6 +4,14 @@ url = "https://github.com/catppuccin/bat.git"
 refreshPeriod = "168h"
 clone.args = ["--filter=blob:none"]
 pull.args = ["--ff-only"]
+
+[".config/git/delta"]
+type = "git-repo"
+url = "https://github.com/catppuccin/delta.git"
+refreshPeriod = "168h"
+clone.args = ["--filter=blob:none"]
+pull.args = ["--ff-only"]
+
 [".config/kitty/themes/catppuccin"]
 type = "git-repo"
 url = "https://github.com/catppuccin/kitty.git"
