fix(zed): fix configuration of build on save

--- a/home/dot_config/zed/settings.json
+++ b/home/dot_config/zed/settings.json
@@ -119,8 +119,8 @@
           "latexindent": {
             "modifyLineBreaks": true
           },
-          "onSave": true,
           "build": {
+            "onSave": true,
             "executable": "tectonic",
             "args": [
               "-X",
@@ -188,3 +188,4 @@
     }
   }
 }
+// vim: ft=jsonc
