--- a/home/dot_config/maa/tasks/daily.toml
+++ b/home/dot_config/maa/tasks/daily.toml
@@ -52,7 +52,7 @@ expiring_medicine = 1000
 # On any side story open, fight given side story stage
 [[tasks.variants]]
 condition = { type = "OnSideStory", client = "Official" }
-params = { stage = "RS-7", series = 3 }
+params = { stage = "OR-9", series = 3 }
 
 # Otherwise, fight PR-A-2 on Monday, PR-B-2 on Tuesday, PR-D-2 on Wednesday,
 # PR-C-1 on Thursday, 1-7 for the rest of the week
