feat(zed): disable warp guide for log files

--- a/home/dot_config/zed/settings.json
+++ b/home/dot_config/zed/settings.json
@@ -180,6 +180,10 @@
       "soft_wrap": "editor_width",
       "hard_tabs": true // latexindent use tab to indent by default
     },
+    "LOG": {
+      "preferred_line_length": 9999,
+      "wrap_guides": []
+    },
     "Git Config": {
       "hard_tabs": true
     }
