feat(zed): use o1 as default assitant

--- a/home/dot_config/zed/settings.json
+++ b/home/dot_config/zed/settings.json
@@ -10,7 +10,7 @@
   "assistant": {
     "default_model": {
       "provider": "copilot_chat",
-      "model": "claude-3-5-sonnet"
+      "model": "o1"
     },
     "default_width": 400,
     "version": "2"
