--- a/home/dot_config/zed/settings.json
+++ b/home/dot_config/zed/settings.json
@@ -88,7 +88,11 @@
     "shell": {
       "program": "fish"
     },
-    "detect_venv": "off",
+    "detect_venv": {
+      "on": {
+        "activate_script": "fish"
+      }
+    },
     "toolbar": {
       "breadcrumbs": false
     }
