--- a/home/dot_config/zed/settings.json
+++ b/home/dot_config/zed/settings.json
@@ -132,13 +132,18 @@
           }
         }
       }
+    },
+    "tinymist": {
+      "initialization_options": {
+        "compileStatus": "enable",
+        "formatterMode": "typstyle"
+      }
     }
   },
   "languages": {
     "Python": {
       "tab_size": 4,
       "language_servers": ["!pylsp", "..."],
-      "format_on_save": "on",
       "formatter": [
         {
           "code_actions": {
@@ -175,6 +180,9 @@
       "preferred_line_length": 1000,
       "soft_wrap": "editor_width",
       "remove_trailing_whitespace_on_save": false
+    },
+    "Typst": {
+      "language_servers": ["tinymist", "..."]
     },
     "LaTeX": {
       "preferred_line_length": 1000,
