fix(zed): local pyright binary name

--- a/home/dot_config/zed/settings.json
+++ b/home/dot_config/zed/settings.json
@@ -101,6 +101,12 @@
     "enabled": true
   },
   "lsp": {
+    "pyright": {
+      "binary": {
+        "path": "pyright-langserver",
+        "arguments": ["--stdio"]
+      }
+    },
     "rust-analyzer": {
       "initialization_options": {
         "checkOnSave": {
