--- a/home/dot_config/zed/settings.json
+++ b/home/dot_config/zed/settings.json
@@ -7,6 +7,9 @@
 // custom settings, run `zed: open default settings` from the
 // command palette
 {
+  "edit_predictions": {
+    "mode": "eager_preview"
+  },
   "features": {
     "edit_prediction_provider": "zed"
   },
