--- a/home/dot_config/maa/tasks/daily.toml
+++ b/home/dot_config/maa/tasks/daily.toml
@@ -51,24 +51,31 @@ expiring_medicine = 1000
 
 # On any side story open, fight given side story stage
 # [[tasks.variants]]
-# condition = { type = "OnSideStory", client = "Official" }
-# params = { stage = "HS-7", series = 3 }
+condition = { type = "OnSideStory", client = "Official" }
+params = { stage = "HS-7", series = 3 }
+
 # Otherwise, fight PR-A-2 on Monday, PR-B-2 on Tuesday, PR-D-2 on Wednesday,
 # PR-C-1 on Thursday, 1-7 for the rest of the week
-# [[tasks.variants]]
-# condition = { type = "Weekday", weekdays = ["Mon"], timezone = "Official" }
-# params = { stage = "PR-A-2", series = 2 }
-# [[tasks.variants]]
-# condition = { type = "Weekday", weekdays = ["Tue"], timezone = "Official" }
-# params = { stage = "PR-B-2", series = 2 }
-# [[tasks.variants]]
-# condition = { type = "Weekday", weekdays = ["Wed"], timezone = "Official" }
-# params = { stage = "PR-D-2", series = 2 }
-# [[tasks.variants]]
-# condition = { type = "Weekday", weekdays = ["Thu"], timezone = "Official" }
-# params = { stage = "PR-C-2", series = 2 }
 [[tasks.variants]]
-params = { stage = "", series = 3 }
+condition = { type = "Weekday", weekdays = ["Mon"], timezone = "Official" }
+params = { stage = "PR-A-2", series = 2 }
+[[tasks.variants]]
+condition = { type = "Weekday", weekdays = ["Tue"], timezone = "Official" }
+params = { stage = "PR-B-2", series = 2 }
+[[tasks.variants]]
+condition = { type = "Weekday", weekdays = ["Wed"], timezone = "Official" }
+params = { stage = "PR-D-2", series = 2 }
+[[tasks.variants]]
+condition = { type = "Weekday", weekdays = ["Thu"], timezone = "Official" }
+params = { stage = "PR-C-2", series = 2 }
+[[tasks.variants]]
+condition = { type = "Weekday", weekdays = [
+  "Sat",
+  "Sun",
+], timezone = "Official" }
+params = { stage = "AP-5", series = 2 }
+[[tasks.variants]]
+params = { stage = "1-7", series = 3 }
 
 #------------------------------ Mall ------------------------------#
 # Mall before 7:00
