feat(zed): update AI settings and simplify keymap
Set Gemini Pro as the default AI model and configure DeepSeek for
specific tasks like inline assistance, commits, and summaries.

Remove duplicate keybindings for the git panel toggle. Remove Julia,
LaTeX, Ruff, and TOML from auto-installed extensions.

--- a/home/dot_config/zed/settings.json
+++ b/home/dot_config/zed/settings.json
@@ -15,19 +15,29 @@
   },
   "assistant": {
     "default_model": {
-      "provider": "copilot_chat",
-      "model": "claude-3-7-sonnet"
+      "provider": "google",
+      "model": "gemini-2.5-pro-exp-03-25"
     },
+    "inline_assistant_model": {
+      "provider": "deepseek",
+      "model": "deepseek-chat"
+    },
+    "commit_message_model": {
+      "provider": "deepseek",
+      "model": "deepseek-v3"
+    },
+    "thread_summary_model": {
+      "provider": "deepseek",
+      "model": "deepseek-v3"
+    },
+    "always_allow_tool_actions": true,
+    "default_profile": "write",
     "version": "2"
   },
   "auto_install_extensions": {
     "catppuccin": true,
     "catppuccin-icons": true,
     "git-firefly": true,
-    "julia": true,
-    "latex": true,
-    "ruff": true,
-    "toml": true,
     "typos": true,
     "wakatime": true
   },
