--- a/home/dot_config/zed/settings.json
+++ b/home/dot_config/zed/settings.json
@@ -13,22 +13,48 @@
   "edit_predictions": {
     "mode": "subtle"
   },
-  "assistant": {
+  "agent": {
+    "profiles": {
+      "write": {
+        "name": "Write",
+        "tools": {
+          "copy_path": true,
+          "create_directory": true,
+          "create_file": true,
+          "delete_path": true,
+          "diagnostics": true,
+          "edit_file": true,
+          "fetch": true,
+          "list_directory": true,
+          "move_path": true,
+          "now": true,
+          "find_path": true,
+          "read_file": true,
+          "grep": true,
+          "terminal": true,
+          "thinking": true,
+          "web_search": true,
+          "open": true
+        },
+        "enable_all_context_servers": true,
+        "context_servers": {}
+      }
+    },
     "default_model": {
       "provider": "google",
       "model": "gemini-2.5-pro-exp-03-25"
     },
     "inline_assistant_model": {
-      "provider": "deepseek",
-      "model": "deepseek-chat"
+      "provider": "copilot_chat",
+      "model": "gpt-4o"
     },
     "commit_message_model": {
-      "provider": "deepseek",
-      "model": "deepseek-v3"
+      "provider": "copilot_chat",
+      "model": "gpt-4o"
     },
     "thread_summary_model": {
-      "provider": "deepseek",
-      "model": "deepseek-v3"
+      "provider": "copilot_chat",
+      "model": "gpt-4o"
     },
     "always_allow_tool_actions": true,
     "default_profile": "write",
