--- a/home/dot_config/zed/settings.json
+++ b/home/dot_config/zed/settings.json
@@ -159,8 +159,7 @@
       "formatter": [
         {
           "code_actions": {
-            "source.organizeImports.ruff": true,
-            "source.fixAll.ruff": true
+            "source.organizeImports.ruff": true
           }
         },
         {
