feat(zed): hide collaboration panel

--- a/home/dot_config/zed/settings.json
+++ b/home/dot_config/zed/settings.json
@@ -52,6 +52,9 @@
   "search": {
     "button": false
   },
+  "collaboration_panel": {
+    "button": false
+  },
   "pane_split_direction_horizontal": "down",
   "pane_split_direction_vertical": "right",
   "theme": {
