zed: fix tinymist settings

--- a/home/dot_config/zed/settings.json
+++ b/home/dot_config/zed/settings.json
@@ -144,13 +144,8 @@
       }
     },
     "tinymist": {
-      "initialization_options": {
+      "settings": {
         "compileStatus": "enable",
-        // "preview": {
-        //   "background": {
-        //     "enabled": true
-        //   }
-        // },
         "formatterMode": "typstyle"
       }
     }
