zed: use cmd+enter instead of enter to send

--- a/home/dot_config/zed/settings.json
+++ b/home/dot_config/zed/settings.json
@@ -14,6 +14,7 @@
     "mode": "subtle"
   },
   "agent": {
+    "use_modifier_to_send": true,
     "default_model": {
       "provider": "deepseek",
       "model": "deepseek-reasoner"
