--- a/home/dot_config/zed/settings.json
+++ b/home/dot_config/zed/settings.json
@@ -34,6 +34,33 @@
     "always_allow_tool_actions": true,
     "default_profile": "write"
   },
+  "language_models": {
+    "ollama": {
+      "api_url": "http://100.67.177.127:11434",
+      "available_models": [
+        {
+          "name": "qwen3:14b",
+          "display_name": "Qwen 3 14B",
+          "supports_thinking": true,
+          "supports_tools": true,
+          "max_tokens": 20480 // 20K, Pure GPU
+        },
+        {
+          "name": "qwen3-coder:30b",
+          "display_name": "Qwen 3 Coder Flash",
+          // "supports_tools": true,
+          "max_tokens": 262144 // 256k, Pure CPU
+        },
+        {
+          "name": "qwen3:30b-a3b",
+          "display_name": "Qwen 3 30B A3B",
+          "supports_thinking": true,
+          "supports_tools": true,
+          "max_tokens": 262144 // 256k, Pure CPU
+        }
+      ]
+    }
+  },
   "auto_install_extensions": {
     "catppuccin": true,
     "catppuccin-icons": true,
