zed: don't activate venv automatically

--- a/home/dot_config/zed/settings.json
+++ b/home/dot_config/zed/settings.json
@@ -145,11 +145,7 @@
     "shell": {
       "program": "fish"
     },
-    "detect_venv": {
-      "on": {
-        "activate_script": "fish"
-      }
-    },
+    "detect_venv": "off",
     "toolbar": {
       "breadcrumbs": false
     }
