zed: disable taxlab forward search after build

--- a/home/dot_config/zed/settings.json
+++ b/home/dot_config/zed/settings.json
@@ -166,6 +166,7 @@
       "settings": {
         "texlab": {
           "build": {
+            "forwardSearchAfter": false,
             "onSave": true
           }
         }
