--- a/home/dot_config/zed/settings.json
+++ b/home/dot_config/zed/settings.json
@@ -16,8 +16,8 @@
   "agent": {
     "use_modifier_to_send": true,
     "default_model": {
-      "provider": "zed.dev",
-      "model": "claude-sonnet-4"
+      "provider": "anthropic",
+      "model": "claude-sonnet-4-5-latest"
     },
     "inline_assistant_model": {
       "provider": "deepseek",
