zed: use new -r flag reuse the same zed windows

--- a/home/dot_config/zed/settings.json
+++ b/home/dot_config/zed/settings.json
@@ -130,7 +130,7 @@
     "working_directory": "current_project_directory",
     // Use zed itself as editor for CLI tools that require an editor.
     "env": {
-      "VISUAL": "zed --wait"
+      "VISUAL": "zed --wait -r"
     },
     // To use ALT+<key> shortcuts in terminal on macOS
     "option_as_meta": true,
