--- a/home/dot_config/zed/settings.json
+++ b/home/dot_config/zed/settings.json
@@ -21,12 +21,12 @@
       "model": "claude-sonnet-4-5-latest"
     },
     "inline_assistant_model": {
-      "provider": "deepseek",
-      "model": "deepseek-reasoner"
+      "provider": "anthropic",
+      "model": "claude-sonnet-4-5-latest"
     },
     "commit_message_model": {
-      "provider": "openrouter",
-      "model": "openai/gpt-5-mini"
+      "provider": "deepseek",
+      "model": "deepseek-chat"
     },
     "thread_summary_model": {
       "provider": "openrouter",
