--- a/home/dot_config/zed/settings.json
+++ b/home/dot_config/zed/settings.json
@@ -18,12 +18,12 @@
   "agent": {
     "use_modifier_to_send": true,
     "default_model": {
-      "provider": "anthropic",
-      "model": "claude-sonnet-4-5-latest"
+      "provider": "deepseek",
+      "model": "deepseek-chat"
     },
     "inline_assistant_model": {
-      "provider": "anthropic",
-      "model": "claude-sonnet-4-5-latest"
+      "provider": "deepseek",
+      "model": "deepseek-chat"
     },
     "commit_message_model": {
       "provider": "deepseek",
