brew: generate brew list from data

--- a/home/.chezmoidata/packages.toml
+++ b/home/.chezmoidata/packages.toml
@@ -11,7 +11,7 @@ fish = { dnf = "" }
 fzf = {  }
 gh = {  }
 git = { brew = "" }
-git-delta = { brew = "" }
+git-delta = {  }
 lazygit = { copr = "dejan/lazygit" }
 ripgrep = {  }
 uv = {  }
